SERVER-58489 Collection creation stuck in an infinite writeConflictRetry loop when having a duplicate name as a view

(cherry picked from commit c7727a3f407d4f7552df443ff6c81e4f7d6f3fe2)